--- a/everywhere-backend/src/main/resources/application.properties
+++ b/everywhere-backend/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=everywhere-backend
+
+#Configuracion de la ruta base para la API v1
+server.servlet.context-path=/api/v1
+
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+
+#Configuracion de JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
