feat: adding crud for sucursal

--- a/everywhere-backend/src/main/resources/application.properties
+++ b/everywhere-backend/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.datasource.password=${DATABASE_PASSWORD}
 #Configuracion de JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration,org.springframework.boot.actuate.autoconfigure.security.servlet.ManagementWebSecurityAutoConfiguration
