--- a/everywhere-backend/pom.xml
+++ b/everywhere-backend/pom.xml
@@ -84,6 +84,12 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- ========== AOP (Aspect Oriented Programming) ========== -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>me.paulschwarz</groupId>
             <artifactId>spring-dotenv</artifactId>
