--- a/everywhere-backend/Dockerfile
+++ b/everywhere-backend/Dockerfile
@@ -1,9 +1,11 @@
+FROM maven:3.9-openjdk-21 AS build
+WORKDIR /app
+COPY pom.xml .
+COPY src ./src
+RUN mvn clean package -DskipTests
+
 FROM openjdk:21-jdk-slim
-
-ARG JAR_FILE=target/everywhere-backend-0.0.1-SNAPSHOT.jar
-
-COPY ${JAR_FILE} everywhere-backend.jar
-
+WORKDIR /app
+COPY --from=build /app/target/*.jar everywhere-backend.jar
 EXPOSE 8080
-
 ENTRYPOINT ["java","-jar","everywhere-backend.jar"]
