--- a/everywhere-backend/src/main/resources/application.properties
+++ b/everywhere-backend/src/main/resources/application.properties
@@ -6,6 +6,7 @@ server.servlet.context-path=/api/v1
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 #Configuracion de JPA
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
