feat: adding pdf

--- a/everywhere-backend/pom.xml
+++ b/everywhere-backend/pom.xml
@@ -145,6 +145,24 @@
             <artifactId>selenium-java</artifactId>
         </dependency>
 
+        <!-- ========== ITEXT PDF ========== -->
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itext-core</artifactId>
+            <version>8.0.2</version>
+            <type>pom</type>
+        </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>kernel</artifactId>
+            <version>8.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>layout</artifactId>
+            <version>8.0.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
