--- a/everywhere-backend/src/main/resources/application.properties
+++ b/everywhere-backend/src/main/resources/application.properties
@@ -3,16 +3,26 @@ spring.application.name=everywhere-backend
 #Configuracion de la ruta base para la API v1
 server.servlet.context-path=/api/v1
 
+# Configuración de base de datos optimizada para Render
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.hikari.maximum-pool-size=5
 
-#Configuracion de JPA
+# Pool de conexiones optimizado para memoria limitada
+spring.datasource.hikari.maximum-pool-size=3
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1200000
+
+# Configuración JPA optimizada para memoria
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=false
+spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.jdbc.batch_size=10
+spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
 
 #Configuracion de Jackson para JSON
 spring.jackson.default-property-inclusion=NON_NULL
