--- a/everywhere-backend/src/main/resources/application.properties
+++ b/everywhere-backend/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.datasource.hikari.max-lifetime=1200000
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
-spring.jpa.open-in-view=true
+spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.jdbc.batch_size=10
 spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
 
