feat: dylan, im waiting for u, notify me when ur finish

--- a/everywhere-backend/src/main/resources/application.properties
+++ b/everywhere-backend/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Configuracion ultra restrictiva de HikariCP para Supabase
+# Configuracion ultra restrictiva de HikariCP
 spring.datasource.hikari.maximum-pool-size=1
 spring.datasource.hikari.minimum-idle=0
 spring.datasource.hikari.connection-timeout=30000
