feat: añadiendo metadata y optimizando query en liquidaciones

--- a/everywhere-backend/src/main/resources/application.properties
+++ b/everywhere-backend/src/main/resources/application.properties
@@ -8,13 +8,15 @@ spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Configuracion ultra restrictiva de HikariCP
-spring.datasource.hikari.maximum-pool-size=1
-spring.datasource.hikari.minimum-idle=0
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.idle-timeout=600000
+# Configuracion optimizada de HikariCP para produccion
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.leak-detection-threshold=60000
+spring.datasource.hikari.validation-timeout=5000
+spring.datasource.hikari.initialization-fail-timeout=1
 
 #Configuracion de JPA
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
