--- a/everywhere-backend/src/main/resources/application.properties
+++ b/everywhere-backend/src/main/resources/application.properties
@@ -20,11 +20,19 @@ spring.datasource.hikari.initialization-fail-timeout=1
 
 #Configuracion de JPA
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
 #Configuracion de Jackson para JSON
 spring.jackson.default-property-inclusion=NON_NULL
+
+# ========== REDIS CACHE CONFIGURATION ==========
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=${REDIS_PORT}
+spring.data.redis.password=${REDIS_PASSWORD}
+spring.data.redis.timeout=60000
+spring.cache.type=redis
+spring.cache.redis.time-to-live=3600000
 
 #spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration,org.springframework.boot.actuate.autoconfigure.security.servlet.ManagementWebSecurityAutoConfiguration
 
