Add: Search all documents with persons and id , and search with the query Like in the numnber of documents

--- a/everywhere-backend/src/main/resources/application.properties
+++ b/everywhere-backend/src/main/resources/application.properties
@@ -30,3 +30,5 @@ spring.jackson.default-property-inclusion=NON_NULL
 
 jwt.secret=${JWT_SECRET}
 jwt.validity-in-seconds=2592000
+server.address=0.0.0.0
+server.port=8080
